--- a/HermesChatApp.csproj
+++ b/HermesChatApp.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\images\avatars\" />
+    <Folder Include="wwwroot\uploads\" />
   </ItemGroup>
 
 </Project>
